tests/ui/pattern/usefulness/nested-non-exhaustive-enums.stderr
error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/nested-non-exhaustive-enums.rs:8:11
   |
LL |     match Some(NonExhaustiveEnum::A) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^ pattern `Some(_)` not covered
   |
note: `Option<NonExhaustiveEnum>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<NonExhaustiveEnum>`
   = note: `NonExhaustiveEnum` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         Some(_) => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
